<resources>
    <string name="app_name">disc test</string>
    <string name="disc.test" translatable="false">DISC Test</string>
    <string name="action_Language" translatable="false">Language</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="title_activity_main22" translatable="false">Disc Test</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_contact__us" translatable="false">Contact Us</string>
    <string name="title_activity_result_activity__d" translatable="false">ResultActivity_D</string>
    <string name="title_activity_result_activity__i" translatable="false">ResultActivity_I</string>
    <string name="title_activity_result_activity__s" translatable="false">ResultActivity_S</string>
    <string name="title_activity_result_activity__c" translatable="false">ResultActivity_C</string>
    <string name="description">Description</string>
    <string name="video">Video</string>
    <string name="Personalities">Personalities</string>
    <string name="Language">Language</string>
    <string name="Contact">Contact Us</string>
    <string name="ShareApp">Share App</string>
    <string name="ReviewApp">Review App</string>
    <string name="about">About</string>
    <string name="personality_c">You Are C Personality</string>
    <string name="personality_d">You Are D Personality</string>
    <string name="personality_i">You Are I Personality</string>
    <string name="personality_s">You Are S Personality</string>
    <string name="personality" translatable="false">choose your personality</string>
    <string name="rta_dialog_title" translatable="false">Rate this app</string>
    <string name="rta_dialog_message" translatable="false">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thank you for your support!</string>
    <string name="rta_dialog_ok" translatable="false">Rate now</string>
    <string name="rta_dialog_cancel" translatable="false">Later</string>
    <string name="rta_dialog_no" translatable="false">No, thanks</string>
    <string name="dialog_title"> Disc Test</string>
    <string name="dialog_message"> Are you sure to exit ? </string>
    <string name="positive_button"> Yes</string>
    <string name="negative_button">No</string>
    <string name="d1">Forceful</string>
    <string name="i1">Expressive</string>
    <string name="s1">Restrained</string>
    <string name="c1">Careful</string>
    <string name="d2">Pioneering</string>
    <string name="i2">Exciting</string>
    <string name="s2">Satisfied</string>
    <string name="c2">Correct</string>
    <string name="d3">Bold</string>
    <string name="i3">Animated</string>
    <string name="s3">Willing</string>
    <string name="c3">Precise</string>
    <string name="d4">Argumentative</string>
    <string name="i4">Unpredictable</string>
    <string name="s4">Indecisive</string>
    <string name="c4">Doubting</string>
    <string name="d5">Daring</string>
    <string name="i5">Outgoing</string>
    <string name="s5">Patient</string>
    <string name="c5">Respectful</string>
    <string name="d6">Self reliant</string>
    <string name="i6">Persuasive</string>
    <string name="s6">Gentle</string>
    <string name="c6">Logical</string>
    <string name="d7">Decisive</string>
    <string name="i7">Life of the party</string>
    <string name="s7">Even tempered</string>
    <string name="c7">Cautious</string>
    <string name="d8">Assertive</string>
    <string name="i8">Popular</string>
    <string name="s8">Generous</string>
    <string name="c8">Perfectionist</string>
    <string name="d9">Unyielding</string>
    <string name="i9">Colorful</string>
    <string name="s9">Easygoing</string>
    <string name="c9">Modest</string>
    <string name="d10">Persistent</string>
    <string name="i10">Optimistic</string>
    <string name="s10">Accommodating</string>
    <string name="c10">Systematic</string>
    <string name="d11">Relentless</string>
    <string name="i11">Talkative</string>
    <string name="s11">Neighborly</string>
    <string name="c11">Humble</string>
    <string name="d12">Strong willed</string>
    <string name="i12">Playful</string>
    <string name="s12">Friendly</string>
    <string name="c12">Observant</string>
    <string name="d13">Adventurous</string>
    <string name="i13">Charming</string>
    <string name="s13">Deliberate</string>
    <string name="c13">Disciplined</string>
    <string name="d14">Aggressive</string>
    <string name="i14">Attractive</string>
    <string name="s14">Steady</string>
    <string name="c14">Restrained</string>
    <string name="d15">Determined</string>
    <string name="i15">Enthusiastic</string>
    <string name="s15">Sympathetic</string>
    <string name="c15">Analytical</string>
    <string name="d16">Commanding</string>
    <string name="i16">Impulsive</string>
    <string name="s16">Slow paced</string>
    <string name="c16">Critical</string>
    <string name="d17">Force of character</string>
    <string name="i17">Lively</string>
    <string name="s17">Laid back</string>
    <string name="c17">Consistent</string>
    <string name="d18">Independent</string>
    <string name="i18">Influential</string>
    <string name="s18">Kind</string>
    <string name="c18">Orderly</string>
    <string name="d19">Out spoken</string>
    <string name="i19">Popular</string>
    <string name="s19">Pleasant</string>
    <string name="c19">Idealistic</string>
    <string name="d20">Impatient</string>
    <string name="i20">Emotional</string>
    <string name="s20">Procrastinator</string>
    <string name="c20">Serious</string>
    <string name="d21">Competitive</string>
    <string name="i21">Spontaneous</string>
    <string name="s21">Loyal</string>
    <string name="c21">Thoughtful</string>
    <string name="d22">Courageous</string>
    <string name="i22">Convincing</string>
    <string name="s22">Considerate</string>
    <string name="c22">Self sacrificing</string>
    <string name="d23">Pushy</string>
    <string name="i23">Flighty</string>
    <string name="s23">Dependent</string>
    <string name="c23">Stoic</string>
    <string name="d24">Directing</string>
    <string name="i24">Stimulating</string>
    <string name="s24">Tolerant</string>
    <string name="c24">Conventional</string>
    <string name="tAb1d1">Strength Points</string>
    <string name="tAb1d2">  Immediate performer</string>
    <string name="tAb1d3">  persevering</string>
    <string name="tAb1d4">  Taking responsibility well</string>
    <string name="tAb1d5">  Accepts challenges</string>
    <string name="tAb1d6">  Takes speedy decisions</string>
    <string name="tAb1d7">  Solves any problem easily</string>
    <string name="tAb1d8">  independent</string>
    <string name="tAb1d9">  Hardworking</string>
    <string name="tAb1d10">Weakness Points</string>
    <string name="tAb1d11">  Careless</string>
    <string name="tAb1d12">  Reckless</string>
    <string name="tAb1d13">  Undertakes too many things upon himself</string>
    <string name="tAb1d14">  Over demands</string>
    <string name="tAb1d15">  Impatient</string>
    <string name="tAb1d16">  Inelastic and adamant</string>
    <string name="tAb1d17">  Careless about details</string>
    <string name="tAb1d18">  Rejects restrictions</string>
    <string name="tAb1d19">The Ideal Situation:</string>
    <string name="tAb1d20">  Various and newly different activities</string>
    <string name="tAb1d21">  Opportunities to accomplish tasks</string>
    <string name="tAb1d22">  Continuing challenges</string>
    <string name="tAb1d23">  Tough duties</string>
    <string name="tAb1d24">  freehand</string>
    <string name="tAb1d25">  Taking control Of situations</string>
    <string name="tAb1d26">  Demands a straight answer</string>
    <string name="tAb1d27">Needs People To Advance Him</string>
    <string name="tAb1d28">  Followup into routines</string>
    <string name="tAb1d29">  Warning</string>
    <string name="tAb1d30">  Facts and details</string>
    <string name="tAb1d31">Aspects Of Personal Growth</string>
    <string name="tAb1d32">  Growing patience</string>
    <string name="tAb1d33">  Sensitivity toward the needs of others</string>
    <string name="tAb1d34">  More flexible</string>
    <string name="tAb1d35">How To Connect With Him?</string>
    <string name="tAb1d36">  Be direct </string>
    <string name="tAb1d37">  begin with the results and advantages</string>
    <string name="tAb1d38">  Be fast and fixed</string>
    <string name="tAb1d39">  put them in challenges</string>
    <string name="tAb1d40">How To Persuade Him?</string>
    <string name="tAb1d41">  Focus on the results especially the final one</string>
    <string name="tAb1d42">  Answer their question " what we're going to gain?"</string>
    <string name="tAb1d43"> How To Motivate Him?</string>
    <string name="tAb1d44">  Give them a what and let them deal with how</string>
    <string name="tAb1d45">  put them in charge</string>
    <string name="tAb1d46"> How To Disagree With Him?</string>
    <string name="tAb1d47">  Agree on the target</string>
    <string name="tAb1d48">  Ask why you think its better that way?</string>
    <string name="tAb1d49">  have you thought of replacements to achieve the target?</string>
    <string name="tAb1d50">The Behaviors Can Be Observed In</string>
    <string name="tAb1d51"> Purchases: takes a quick decisions</string>
    <string name="tAb1d52"> Change: loves change</string>
    <string name="tAb1d53"> Conflicts: return any attack</string>
    <string name="tAb1d54"> Leadership: Fast, sharp and in a hurry to achieve a goal</string>
    <string name="tAb1d55"> The office shape: particular and realstic things , Helpful, large office</string>
    <string name="tAb1d56"> Movements: A lot of hand signs and other movements</string>
    <string name="tAb1d57"> Goals: puts a lot of goals that is mostly Highrisk and nonwritten</string>
    <string name="tAb1d58"> Speeches: Direct, specific with a goal</string>
    <string name="tAb1d59"> strategy: Affective but messy</string>
    <string name="tAb1d60"> Readings: mostly summaries</string>
    <string name="tAb1d61"> Risks: high</string>
    <string name="tAb1d62"> rules: Tends to break it and achieve the intended goal</string>
    <string name="tAb1d63"> standing: Leaning forward, one of his hands in the pocket</string>
    <string name="tAb1d64"> What removes stress: physical activities and a very strong competitive personality</string>
    <string name="tAb1d65"> On the phone: doesn\'t talk much, Heading towards goal</string>
    <string name="tAb1d66"> Speaking with others: direct, interrupt others, Deduce answers of others</string>
    <string name="tAb1d67"> The way he walks: fast , heading to somewhere</string>
    <string name="tAb1i1" translatable="false">Strength Points</string>
    <string name="tAb1i2">  optimistic</string>
    <string name="tAb1i3">  attractive person / tactless</string>
    <string name="tAb1i4">  Good speaker</string>
    <string name="tAb1i5">  creates an atmosphere amused </string>
    <string name="tAb1i6">  enthusiastic</string>
    <string name="tAb1i7">  leaves a good impression</string>
    <string name="tAb1i8">  masked</string>
    <string name="abouttxt">DISC is a behavior assessment tool based on the DISC theory of psychologist William Moulton Marston, which centers on four different behavioral traits, which today are called: dominance, influence, steadiness, and compliance. </string>
    <string name="disc"> </string>
    <string name="developers">Developed by :</string>
    <string name="names">Pola Alper - Kerolos G. Samy</string>
</resources>