<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            style="@style/c_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tAb1d1"


            />
        <TextView
            android:id="@+id/spc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>

        <TextView
            style="@style/c_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tAb1d10"


            />
        <TextView
            android:id="@+id/wpc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>

        <TextView
            style="@style/c_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tAb1d19"


            />
        <TextView
            android:id="@+id/isc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>
        <TextView
            style="@style/c_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tAb1d27"
            android:textSize="20sp"


            />
        <TextView
            android:id="@+id/nedc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>
        <TextView
            style="@style/c_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tAb1d31"
            android:textSize="20sp"


            />
        <TextView
            android:id="@+id/aspc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>
        <TextView
            style="@style/c_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tAb1d35"



            />
        <TextView
            android:id="@+id/htcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>

        <TextView
            style="@style/c_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tAb1d40"


            />
        <TextView
            android:id="@+id/htpc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>
        <TextView
            style="@style/c_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tAb1d43"


            />
        <TextView
            android:id="@+id/htmc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>
        <TextView
            style="@style/c_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tAb1d46"


            />
        <TextView
            android:id="@+id/htdc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>
        <TextView
            style="@style/c_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tAb1d50"
            android:textSize="20sp"


            />
        <TextView
            android:id="@+id/boc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>


    </LinearLayout>

</ScrollView>

