<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@null"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/about_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/abouttxt"
            android:textColor="#ffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/di"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disc"
            android:textSize="22sp" />


        <TextView
            android:id="@+id/developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developers"


            android:textColor="#ffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/names"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/names"
            android:textColor="#ffff"
            android:textSize="20sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/adViewabout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>


</LinearLayout>
